--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mysql",
   "version": "1.0.0",
-  "description": "",
+  "description": "my 2018 graduation_project_web",
   "private": true,
   "dependencies": {
     "egg": "^2.0.0",
@@ -63,5 +63,9 @@
     "url": ""
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "main": ".autod.conf.js",
+  "directories": {
+    "test": "test"
+  }
 }
