--- a/package.json
+++ b/package.json
@@ -8,20 +8,21 @@
     "egg-cors": "^2.0.0",
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.1.0",
-    "egg-validate": "^1.0.0",
     "egg-security": "^2.0.0",
+    "egg-validate": "^1.0.0",
     "egg-view-nunjucks": "^2.1.4",
     "egg-webpack": "^3.2.2",
     "eslint-config-egg": "^5.1.1",
     "marked": "^0.3.9",
-    "qiniu": "^7.1.1",
-    "qrcode": "^1.2.0",
+    "nodemailer": "^4.6.4",
     "postcss-aspect-ratio-mini": "^0.0.2",
     "postcss-flexbugs-fixes": "^3.3.0",
     "postcss-loader": "^2.0.10",
     "postcss-px-to-viewport": "^0.0.3",
     "postcss-pxtorem": "^4.0.1",
-    "postcss-write-svg": "^3.0.1"
+    "postcss-write-svg": "^3.0.1",
+    "qiniu": "^7.1.1",
+    "qrcode": "^1.2.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
