--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "egg": "^2.0.0",
     "egg-cors": "^2.0.0",
     "egg-mysql": "^3.0.0",
+    "egg-passport": "^2.0.1",
     "egg-scripts": "^2.1.0",
     "egg-security": "^2.0.0",
     "egg-validate": "^1.0.0",
@@ -15,6 +16,7 @@
     "eslint-config-egg": "^5.1.1",
     "marked": "^0.3.9",
     "nodemailer": "^4.6.4",
+    "passport-local": "^1.0.0",
     "postcss-aspect-ratio-mini": "^0.0.2",
     "postcss-flexbugs-fixes": "^3.3.0",
     "postcss-loader": "^2.0.10",
