--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "egg-webpack": "^3.2.2",
     "eslint-config-egg": "^5.1.1",
     "marked": "^0.3.9",
+    "multer": "^1.3.0",
     "nodemailer": "^4.6.4",
     "passport-local": "^1.0.0",
     "postcss-aspect-ratio-mini": "^0.0.2",
@@ -24,7 +25,8 @@
     "postcss-pxtorem": "^4.0.1",
     "postcss-write-svg": "^3.0.1",
     "qiniu": "^7.1.1",
-    "qrcode": "^1.2.0"
+    "qrcode": "^1.2.0",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "autod": "^3.0.1",
