--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "my 2018 graduation_project_web",
   "private": true,
   "dependencies": {
+    "cos-nodejs-sdk-v5": "^2.4.1",
     "egg": "^2.0.0",
     "egg-cors": "^2.0.0",
     "egg-mysql": "^3.0.0",
